1.支持按照参数编译期生成bean对象