@@ -35,21 +35,30 @@
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter-aop</artifactId>
         </dependency>
+
+        <dependency>
+            <groupId>io.github.dreamlike</groupId>
+            <artifactId>leyden-compile-enhance</artifactId>
+        </dependency>
+        <dependency>
+            <groupId>io.github.dreamlike</groupId>
+            <artifactId>leyden-compile-enhance</artifactId>
+        </dependency>
     </dependencies>
     <build>
 
         <plugins>
+
             <plugin>
                 <groupId>org.springframework.boot</groupId>
                 <artifactId>spring-boot-maven-plugin</artifactId>
                 <executions>
-<!--                    <execution>-->
-<!--                        <id>process-aot</id>-->
-<!--                        <goals>-->
-<!--                            <goal>process-aot</goal>-->
-<!--                        </goals>-->
-<!--                    </execution>-->
-
+                    <execution>
+                        <id>process-aot</id>
+                        <goals>
+                            <goal>process-aot</goal>
+                        </goals>
+                    </execution>
                     <execution>
                         <goals>
                             <goal>repackage</goal>
@@ -57,22 +66,31 @@
                         <configuration>
                             <mainClass>io.github.dreamlike.LeydenSpringMain</mainClass>
                         </configuration>
+
                     </execution>
                 </executions>
             </plugin>
+
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-compiler-plugin</artifactId>
                 <configuration>
                     <target>${java.version}</target>
-                    <release>22</release>
                     <source>${java.version}</source>
                     <compilerArgs>
-                        <!--                        <compilerArg>-enable-preview</compilerArg>-->
+                        <compilerArg>--enable-preview</compilerArg>
+                        <compilerArg>-Aspring.count=10</compilerArg>
                     </compilerArgs>
+                    <annotationProcessors>
+                        <annotationProcessor>io.github.dreamlike.LeydenCompileProcessor</annotationProcessor>
+                    </annotationProcessors>
                 </configuration>
             </plugin>
 
+            <plugin>
+                <groupId>org.graalvm.buildtools</groupId>
+                <artifactId>native-maven-plugin</artifactId>
+            </plugin>
         </plugins>
 
     </build>
